[package]
name = "dioxus_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "master" }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", branch = "master" }
serde = "1.0.171"
serde_json = "1.0.102"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", features = ["kv-mem"] }